# ChangeLog for app-arch/rzip
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/rzip/ChangeLog,v 1.25 2008/04/21 16:36:13 drac Exp $

  21 Apr 2008; Samuli Suominen <drac@gentoo.org> -rzip-2.0-r1.ebuild,
  -rzip-2.0-r2.ebuild, rzip-2.1.ebuild:
  Instead of placing WANT_AUTOCONF in front of eautoreconf, leave it unset
  so it defaults on latest. Use emake.

  21 Apr 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Fix up metadata.xml. If there's no maintainer for the package, the metadata
  also needs to contain m-needed@g.o.

  07 Feb 2008; Robin H. Johnson <robbat2@gentoo.org> metadata.xml:
  The original proxy-maint is long gone. Package needs new maintainers.

  26 Jan 2008; Fabian Groffen <grobian@gentoo.org> rzip-2.0-r2.ebuild,
  rzip-2.1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  09 Jun 2007; Peter Weller <welp@gentoo.org> rzip-2.1.ebuild:
  Stable on amd64 wrt bug 181410

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> rzip-2.1.ebuild:
  ppc stable

  24 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> rzip-2.1.ebuild:
  Stable on sparc

  15 Apr 2007; Markus Rothe <corsair@gentoo.org> rzip-2.1.ebuild:
  Stable on ppc64

  20 Mar 2007; Raúl Porcel <armin76@gentoo.org> rzip-2.1.ebuild:
  x86 stable

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

*rzip-2.1 (20 Feb 2006)

  20 Feb 2006; Brian Harring <ferringb@gentoo.org> +rzip-2.1.ebuild:
  bug #123431,  rzip-2.1 version bump.

  23 Sep 2005; Fabian Groffen <grobian@gentoo.org> rzip-2.0-r2.ebuild:
  Marking ~ppc-macos (bug #105858)

  22 Sep 2005; Brian Harring <ferringb@gentoo.org> +rzip-2.0-r2.ebuild:
  Cleanups; use users cflags, handle missing strndup, saner cross compile support.
  bug #105858.

  05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org> rzip-2.0-r1.ebuild:
  Masked rzip-2.0-r1.ebuild stable for ppc
