@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/rzip/rzip-2.1.ebuild,v 1.9 2008/04/21 16:37:05 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/rzip/rzip-2.1.ebuild,v 1.10 2008/05/23 23:12:17 darkside Exp $
 
 EAPI="prefix"
 
@@ -26,4 +26,10 @@ src_unpack() {
 
 src_install() {
 	emake DESTDIR="${D}" install || die "emake install failed."
+}
+
+pkg_postinst() {
+	ewarn "It has been reported that this tool will fail on files >4GB"
+	ewarn "Please see https://bugs.gentoo.org/show_bug.cgi?id=217552 for more"
+	ewarn "information."
 }
